--- a/HybridRediff/src/test/resources/env.properties
+++ b/HybridRediff/src/test/resources/env.properties
@@ -1,7 +1,7 @@
 #prop,uat
 env=prod
-reportPath=D:\\Whizdom-Trainings\\Online Training Workspace\\report\\
-gridRun=Y
+reportPath=B:\\Ashish\\report\\
+gridRun=N
 
 money_xpath=//*[@id='homewrapper']/div[5]/a[3]/div/u
 signin_xpath=//*[@id='signin_info']/a[1]
