--- a/HybridRediff/src/test/resources/prod.properties
+++ b/HybridRediff/src/test/resources/prod.properties
@@ -3,5 +3,5 @@ url=http://in.rediff.com
 
 defaultUsername=ashishthakur1983
 defaultPass=pass@1234
-portfoliosuite_xls=D:\\Whizdom-Trainings\\Online Training Workspace\\Recording_Dec17\\Module 21\\Jan 18 release\\HybridRediff\\Files\\PortfolioSuite.xlsx
-stocksuite_xls=D:\\Whizdom-Trainings\\Online Training Workspace\\Recording_Dec17\\Module 21\\Jan 18 release\\HybridRediff\\Files\\StockSuite.xlsx
+portfoliosuite_xls=B:\\Ashish\\Project\\HybridRediff\\Files\\PortfolioSuite.xlsx
+stocksuite_xls=B:\\Ashish\\Project\\HybridRediff\\Files\\StockSuite.xlsx
