--- a/HybridRediff/pom.xml
+++ b/HybridRediff/pom.xml
@@ -54,7 +54,7 @@
 <groupId>org.testng</groupId>
 	<artifactId>testng</artifactId>
 	<version>6.10</version>
-	<scope>test</scope>
+	<scope>compile</scope>
 </dependency>
 <dependency>
 	<groupId>org.apache.maven.surefire</groupId>
@@ -119,7 +119,15 @@
  <build>
     
       <plugins>
-          
+          <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>3.7.0</version>
+        	  <configuration>
+          		<source>1.8</source>
+          		<target>1.8</target>
+        	  </configuration>
+         </plugin>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
